# mapdeduce

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-min.txt  requirements.txt  setup.py
MapDeduce/: MapSeq.py  blup.py  data.py  dataframes.py  helper.py  hwas.py  lmm.py  mapseq.py  munging.py  permp.py  plotting.py  season.py
MapDeduce.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MapSeq/: MapSeq.py  blup.py  data.py  dataframes.py  hwas.py  munging.py  plotting.py
data/russell-2008/: layout-seq.csv  russell-2008.py
hooks/: pre-commit
mapdeduce/: __init__.py  blup.py  data.py  dataframes.py  helper.py  hwas.py  lmm.py  mapseq.py  munging.py  permp.py  plotting.py  season.py
mapdeduce/scripts/: association_test.py
test/: test_MapSeq.py  test_blup.py  test_data.py  test_dataframes.py  test_helper.py  test_hwas.py  test_lmm.py  test_mapseq.py  test_munging.py  test_permp.py  test_plotting.py  test_season.py
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
