# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapdeduce"
version = "2.0.0"
description = """Handling antigenic maps and sequence data, testing amino \
    acid polymorphisms associated with antigenicity."""
readme = "README.md"
authors = [{ name = "David Pattinson", email = "david.pattinson@wisc.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["influenza", "lmm", "antigenic cartography"]
dependencies = [
    "biopython",
    "limix_legacy @ git+https://github.com/davipatti/limix-legacy",
    "matplotlib",
    "pandas",
    "rpy2>=3.0.0",
    "scikit-learn",
    "seaborn",
    "spm1d",
    "tqdm",
]
requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/acorg/mapdeduce"

[tool.setuptools]
packages = ["mapdeduce"]

[tool.setuptools.package-data]
mapdeduce = ["data/test/*.fa"]

[tool.black]
line-length = 79
